<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.LinearLayoutCompat
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--Name section-->
    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="@dimen/form_layout_padding"
        app:hintAnimationEnabled="true"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_hint"
            android:lines="@integer/max_lines_form_field"
 />

    </android.support.design.widget.TextInputLayout>
    <!--Date picker section-->
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_birthdate_label"
            />

        <DatePicker
            android:id="@+id/user_birth_picker"
            android:layout_width="match_parent"
            android:layout_height="@dimen/date_spinner_height"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:datePickerMode="spinner"
            android:soundEffectsEnabled="true"
            android:spinnersShown="true"
            tools:padding="@dimen/data_picker_padding" />

    </android.support.v7.widget.LinearLayoutCompat>
    <!--Phone section-->
    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="@dimen/form_layout_padding"
        app:hintAnimationEnabled="true"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_hint"
            android:id="@+id/user_phone"
            android:lines="@integer/max_lines_form_field"/>

    </android.support.design.widget.TextInputLayout>
    <!--Email section-->
    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="@dimen/form_layout_padding"
        app:hintAnimationEnabled="true"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:id="@+id/user_email"
            android:lines="@integer/max_lines_form_field"/>

    </android.support.design.widget.TextInputLayout>
    <!--Description section-->
    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="@dimen/form_layout_padding"
        app:hintAnimationEnabled="true"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_hint"
            android:id="@+id/user_description"
            android:lines="@integer/max_lines_description"/>

    </android.support.design.widget.TextInputLayout>
    <!--Next Button-->
    <Button
        android:id="@+id/form_next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_button_text"
        android:theme="@style/MyMaterialButton"
    />

</android.support.v7.widget.LinearLayoutCompat>


